rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__zcode_fixture_monthly_table.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "serde_json::to_string_pretty(&table_snapshot(&monthly.rows,\nAgentReportKind::Monthly, &monthly.detected_agents,)).unwrap()"
---
{
  "headers": [
    "Month",
    "Agent",
    "Models",
    "Input",
    "Output",
    "Cache Create",
    "Cache Read",
    "Total Tokens",
    "Cost (USD)"
  ],
  "rows": [
    {
      "cells": [
        "2099-01",
        "All",
        "",
        "190",
        "30",
        "45",
        "65",
        "330",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- ZCode",
        "- GLM-5.2\n- GLM-5.3",
        "190",
        "30",
        "45",
        "65",
        "330",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "2099-02",
        "All",
        "",
        "40",
        "5",
        "0",
        "10",
        "55",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- ZCode",
        "- GLM-5.3",
        "40",
        "5",
        "0",
        "10",
        "55",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "Total",
        "",
        "",
        "230",
        "35",
        "45",
        "75",
        "385",
        "$0.00"
      ],
      "kind": "total"
    }
  ],
  "title": "Coding (Agent) CLI Usage Report - Monthly\nDetected: ZCode"
}
